# ai-cad-agents

./: .gitignore  .mcp.json  AGENTS.md  README.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: agent-corpus-assembly-v1.json  agent-corpus-bearings-v1.json  agent-corpus-foundation-v1.json  agent-corpus-m4.json  agent-corpus-sketch-v1.json  agent-corpus-v1.json  mcp-baseline-case-canonico-v1.json  mcp-baseline-placa-canonica-v1.json  mcp-baseline-suporte-canonico-v1.json
docs/: ai-agent-optimization-plan.md  architecture.md  audit.md  bearings.md  estudo-freecad-mcp.md  installation.md  mcp-integration.md  mcp-scale-roadmap.md  milestones.md  partdesign-roadmap.md  product-vision.md  sketch-environment.md
scripts/: benchmark_agent.ps1  iniciar.ps1  iniciar_rapido.ps1  instalar.ps1  setup.ps1  testar.ps1
showcase/turbina-savonius/: README.md  driver.py  relatorio.json
src/aicad/: __init__.py  application.py  freecad_commands.py  mcp_server.py  mcp_telemetry.py  runtime.py
src/aicad/adapters/: __init__.py  freecad_adapter.py
tests/: freecad_assembly_smoke.py  freecad_bearings_smoke.py  freecad_foundation_smoke.py  freecad_foundation_visual.py  freecad_gui_smoke.py  freecad_m4_smoke.py  freecad_m6_smoke.py  freecad_m7_smoke.py  freecad_mcp_panel_smoke.py  freecad_partdesign_smoke.py  freecad_sketch_smoke.py  freecad_sketch_visual.py  freecad_smoke.py
tests/unit/: test_agent_benchmark.py  test_application.py  test_assembly_tools.py  test_audit.py  test_bearing_tools.py  test_bridge_controller.py  test_bridge_dispatcher.py  test_capabilities.py  test_capture_views.py  test_chat_commands.py  test_context.py  test_contract_hardening.py  test_export_tools.py  test_expressions.py  test_foundation_tools.py  test_imports.py  test_mcp_plan_tools.py  test_mcp_registry.py  test_model_inspection.py  test_modeling_tools.py  test_optimization_investments.py  test_orchestration_metrics.py  test_orchestrator.py  test_plan_bridge_dispatcher.py  test_plan_service.py  test_recipes.py  test_sketch_environment.py  test_tool_registry.py  test_tool_results.py  test_tool_selector.py  test_turn_controller.py  test_visual_cache.py
(+73 files in other folders)
