[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-cad-workbench"
version = "0.1.0"
description = "AI-first FreeCAD workbench with a shared MCP tool layer"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.28,<1",
  "keyring>=25,<27",
  "mcp>=1.20,<2",
  "platformdirs>=4,<5",
  "pydantic>=2.11,<3",
  "typing-extensions>=4.12,<5",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<10",
  "pytest-cov>=6,<8",
]

[project.scripts]
aicad-mcp = "aicad.mcp_server:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["aicad*"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests/unit"]

[tool.coverage.run]
source = ["aicad"]
