[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "talos-freecad-mcp"
version = "0.2.0"
description = "Safe, structured MCP server and FreeCAD workbench for CAD agents"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "mcp>=1.20,<2",
  "platformdirs>=4,<5",
  "pydantic>=2.11,<3",
  "typing-extensions>=4.12,<5",
  "jsonschema>=4.23,<5",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<10",
  "pytest-cov>=6,<8",
  "mypy>=1.16,<2",
  "ruff>=0.12,<1",
]

[project.scripts]
aicad-mcp = "aicad.mcp_server:main"

talos-freecad-mcp = "aicad.mcp_server:main"
[tool.setuptools.packages.find]
where = ["src"]
include = ["aicad*"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests/unit"]

[tool.coverage.run]
source = ["aicad"]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]

[tool.ruff.lint.per-file-ignores]
"tests/freecad*.py" = ["E402"]
"src/freecad/AiCad/InitGui.py" = ["F821"]

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
ignore_missing_imports = true
no_implicit_optional = true
warn_unused_configs = true

[tool.coverage.report]
exclude_also = [
  "if TYPE_CHECKING:",
  "raise NotImplementedError",
]
